--- a/styles2.css
+++ b/styles2.css
@@ -31,14 +31,16 @@
 
 :root {
 	--gradient: linear-gradient(
-	45deg,
-	#201547,
-	#582c83,
+	30deg,
+	#099cec,
+	/* #ffc75f, */
+	/* #201547, */
+	/* #ff6f91 */
+	/* #d65db1, */
 	#845ec2,
-	#d65db1,
-	#ff6f91,
-	#ff9671
-	/* #ffc75f */
+	#582c83,
+	/* #ff9671 */
+	#d83e57
 	);
 	}
 
@@ -144,12 +146,12 @@ body .same-width {
 	overflow: hidden;
 	z-index: 250;
 }
+
 #info{
 	list-style-type: none;
 	line-height: .9rem;
 	/* overflow-x: hidden; */
 	margin: auto;
-	color: #041344;
 	width: 25rem;
 	padding-left: 25px;
 }
@@ -174,6 +176,7 @@ body .same-width {
 	padding: 30px 25px 25px;
 	/* text-align: center; */
 	background-color:#099cec;
+	/* animation-fill-mode: forwards; */
 	color: #ffffff;
 }
 
@@ -227,13 +230,11 @@ footer {
 	left:0;
 	bottom:0;
 	background-image: var(--gradient);
-	background-size: 400%;
-	animation: bg-animation 40s infinite alternate;
+	background-size: 150%;
+	animation: bg-animation 20s 2 alternate;
 	/* background-color: #041344; */
 	/* background-color: #582c83; */
-	/* background: radial-gradient(circle, rgba(88,44,131,1) 35%, rgba(32,21,71,1) 100%); */
 	height:60px;
-	/* border-top: 3px solid #ac58ff; */
 	color: white;
 }
 footer > p, object {
