--- a/styles3.css
+++ b/styles3.css
@@ -182,7 +182,7 @@ body .same-width {
 	background-image: url("fu-cl-ed.svg");
 	background-repeat: no-repeat;
 	background-position: 2% 50%;
-	background-size: auto 50px;
+	background-size: 158px auto;
 }
 
 #container {
